--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
+    "mongodb": "^3.3.3",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.3.6",
     "@types/node": "^12.11.7",
     "@types/node-fetch": "^2.5.2",
     "nodemon": "^1.19.4",
