--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "mongodb": "^3.3.3",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "node-schedule": "^1.3.2"
   },
   "devDependencies": {
     "@types/mongodb": "^3.3.6",
     "@types/node": "^12.11.7",
     "@types/node-fetch": "^2.5.2",
+    "@types/node-schedule": "^1.2.4",
     "nodemon": "^1.19.4",
     "typescript": "^3.6.4"
   }
